src/main/java/com/empowerops/babel/todo_deleteme/BabelParser.java
// Generated from C:\Users\Geoff\Code\OASIS/Problem-Definition//pre-src/BabelParser.g4 by ANTLR 4.5.3
package com.empowerops.babel.todo_deleteme;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BabelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER=1, FLOAT=2, DIGIT=3, COS=4, SIN=5, TAN=6, ATAN=7, ACOS=8, ASIN=9, 
		SINH=10, COSH=11, TANH=12, COT=13, LN=14, LOG=15, ABS=16, SQRT=17, CBRT=18, 
		SQR=19, CUBE=20, CIEL=21, FLOOR=22, MAX=23, MIN=24, CONSTANT=25, SUM=26, 
		PROD=27, DYN_VAR=28, VARIABLE=29, LAMBDA=30, LT=31, LTEQ=32, GT=33, GTEQ=34, 
		EQ=35, MULT=36, DIV=37, MOD=38, PLUS=39, MINUS=40, EXPONENT=41, OPEN_PAREN=42, 
		CLOSE_PAREN=43, OPEN_BRACKET=44, CLOSE_BRACKET=45, COMMA=46, LINEBREAKS=47;
	public static final int
		RULE_expression = 0, RULE_expr = 1, RULE_lambdaExpr = 2, RULE_plus = 3, 
		RULE_minus = 4, RULE_mult = 5, RULE_div = 6, RULE_mod = 7, RULE_exponent = 8, 
		RULE_sum = 9, RULE_prod = 10, RULE_dynamicVariableAccess = 11, RULE_binaryFunction = 12, 
		RULE_unaryFunction = 13, RULE_negate = 14, RULE_lt = 15, RULE_lteq = 16, 
		RULE_gt = 17, RULE_gteq = 18, RULE_eq = 19, RULE_variable_only = 20, RULE_name = 21, 
		RULE_variable = 22, RULE_literal = 23;
	public static final String[] ruleNames = {
		"expression", "expr", "lambdaExpr", "plus", "minus", "mult", "div", "mod", 
		"exponent", "sum", "prod", "dynamicVariableAccess", "binaryFunction", 
		"unaryFunction", "negate", "lt", "lteq", "gt", "gteq", "eq", "variable_only", 
		"name", "variable", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'cos'", "'sin'", "'tan'", "'atan'", "'acos'", 
		"'asin'", "'sinh'", "'cosh'", "'tanh'", "'cot'", "'ln'", "'log'", "'abs'", 
		"'sqrt'", "'cbrt'", "'sqr'", "'cube'", "'ceil'", "'floor'", "'max'", "'min'", 
		null, "'sum'", "'prod'", "'var'", null, "'->'", "'<'", "'<='", "'>'", 
		"'>='", "'=='", "'*'", "'/'", "'%'", "'+'", "'-'", "'^'", "'('", "')'", 
		"'['", "']'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INTEGER", "FLOAT", "DIGIT", "COS", "SIN", "TAN", "ATAN", "ACOS", 
		"ASIN", "SINH", "COSH", "TANH", "COT", "LN", "LOG", "ABS", "SQRT", "CBRT", 
		"SQR", "CUBE", "CIEL", "FLOOR", "MAX", "MIN", "CONSTANT", "SUM", "PROD", 
		"DYN_VAR", "VARIABLE", "LAMBDA", "LT", "LTEQ", "GT", "GTEQ", "EQ", "MULT", 
		"DIV", "MOD", "PLUS", "MINUS", "EXPONENT", "OPEN_PAREN", "CLOSE_PAREN", 
		"OPEN_BRACKET", "CLOSE_BRACKET", "COMMA", "LINEBREAKS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BabelParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BabelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BabelParser.EOF, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			expr(0);
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public LambdaExprContext lambdaExpr() {
			return getRuleContext(LambdaExprContext.class,0);
		}
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public ProdContext prod() {
			return getRuleContext(ProdContext.class,0);
		}
		public BinaryFunctionContext binaryFunction() {
			return getRuleContext(BinaryFunctionContext.class,0);
		}
		public UnaryFunctionContext unaryFunction() {
			return getRuleContext(UnaryFunctionContext.class,0);
		}
		public DynamicVariableAccessContext dynamicVariableAccess() {
			return getRuleContext(DynamicVariableAccessContext.class,0);
		}
		public NegateContext negate() {
			return getRuleContext(NegateContext.class,0);
		}
		public MultContext mult() {
			return getRuleContext(MultContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public ModContext mod() {
			return getRuleContext(ModContext.class,0);
		}
		public PlusContext plus() {
			return getRuleContext(PlusContext.class,0);
		}
		public MinusContext minus() {
			return getRuleContext(MinusContext.class,0);
		}
		public LtContext lt() {
			return getRuleContext(LtContext.class,0);
		}
		public LteqContext lteq() {
			return getRuleContext(LteqContext.class,0);
		}
		public GtContext gt() {
			return getRuleContext(GtContext.class,0);
		}
		public GteqContext gteq() {
			return getRuleContext(GteqContext.class,0);
		}
		public EqContext eq() {
			return getRuleContext(EqContext.class,0);
		}
		public ExponentContext exponent() {
			return getRuleContext(ExponentContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(54);
				switch (_input.LA(1)) {
				case INTEGER:
				case FLOAT:
				case CONSTANT:
					{
					setState(52);
					literal();
					}
					break;
				case VARIABLE:
					{
					setState(53);
					variable();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				{
				setState(56);
				match(OPEN_PAREN);
				setState(57);
				expr(0);
				setState(58);
				match(CLOSE_PAREN);
				}
				break;
			case 3:
				{
				setState(62);
				switch (_input.LA(1)) {
				case SUM:
					{
					setState(60);
					sum();
					}
					break;
				case PROD:
					{
					setState(61);
					prod();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(64);
				match(OPEN_PAREN);
				setState(65);
				expr(0);
				setState(66);
				match(COMMA);
				setState(67);
				expr(0);
				setState(68);
				match(COMMA);
				setState(69);
				lambdaExpr();
				setState(70);
				match(CLOSE_PAREN);
				}
				break;
			case 4:
				{
				setState(72);
				binaryFunction();
				setState(73);
				match(OPEN_PAREN);
				setState(74);
				expr(0);
				setState(75);
				match(COMMA);
				setState(76);
				expr(0);
				setState(77);
				match(CLOSE_PAREN);
				}
				break;
			case 5:
				{
				setState(79);
				unaryFunction();
				setState(80);
				match(OPEN_PAREN);
				setState(81);
				expr(0);
				setState(82);
				match(CLOSE_PAREN);
				}
				break;
			case 6:
				{
				setState(84);
				dynamicVariableAccess();
				setState(85);
				match(OPEN_BRACKET);
				setState(86);
				expr(0);
				setState(87);
				match(CLOSE_BRACKET);
				}
				break;
			case 7:
				{
				setState(89);
				negate();
				setState(90);
				expr(5);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(129);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(94);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(98);
						switch (_input.LA(1)) {
						case MULT:
							{
							setState(95);
							mult();
							}
							break;
						case DIV:
							{
							setState(96);
							div();
							}
							break;
						case MOD:
							{
							setState(97);
							mod();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(100);
						expr(4);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(102);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(105);
						switch (_input.LA(1)) {
						case PLUS:
							{
							setState(103);
							plus();
							}
							break;
						case MINUS:
							{
							setState(104);
							minus();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(107);
						expr(3);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(109);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(115);
						switch (_input.LA(1)) {
						case LT:
							{
							setState(110);
							lt();
							}
							break;
						case LTEQ:
							{
							setState(111);
							lteq();
							}
							break;
						case GT:
							{
							setState(112);
							gt();
							}
							break;
						case GTEQ:
							{
							setState(113);
							gteq();
							}
							break;
						case EQ:
							{
							setState(114);
							eq();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(117);
						expr(2);
						}
						break;
					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(119);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(120);
						exponent();
						setState(127);
						switch (_input.LA(1)) {
						case OPEN_PAREN:
							{
							{
							setState(121);
							match(OPEN_PAREN);
							setState(122);
							expr(0);
							setState(123);
							match(CLOSE_PAREN);
							}
							}
							break;
						case INTEGER:
						case FLOAT:
						case CONSTANT:
							{
							setState(125);
							literal();
							}
							break;
						case VARIABLE:
							{
							setState(126);
							variable();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LambdaExprContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LambdaExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_lambdaExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterLambdaExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitLambdaExpr(this);
		}
	}

	public final LambdaExprContext lambdaExpr() throws RecognitionException {
		LambdaExprContext _localctx = new LambdaExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_lambdaExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			name();
			setState(135);
			match(LAMBDA);
			setState(136);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlusContext extends ParserRuleContext {
		public PlusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_plus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitPlus(this);
		}
	}

	public final PlusContext plus() throws RecognitionException {
		PlusContext _localctx = new PlusContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_plus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(PLUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MinusContext extends ParserRuleContext {
		public MinusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_minus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitMinus(this);
		}
	}

	public final MinusContext minus() throws RecognitionException {
		MinusContext _localctx = new MinusContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_minus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(MINUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultContext extends ParserRuleContext {
		public MultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_mult; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterMult(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitMult(this);
		}
	}

	public final MultContext mult() throws RecognitionException {
		MultContext _localctx = new MultContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mult);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(MULT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DivContext extends ParserRuleContext {
		public DivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_div; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitDiv(this);
		}
	}

	public final DivContext div() throws RecognitionException {
		DivContext _localctx = new DivContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_div);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(DIV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModContext extends ParserRuleContext {
		public ModContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_mod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterMod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitMod(this);
		}
	}

	public final ModContext mod() throws RecognitionException {
		ModContext _localctx = new ModContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mod);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(MOD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExponentContext extends ParserRuleContext {
		public ExponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_exponent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterExponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitExponent(this);
		}
	}

	public final ExponentContext exponent() throws RecognitionException {
		ExponentContext _localctx = new ExponentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_exponent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(EXPONENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SumContext extends ParserRuleContext {
		public SumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_sum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterSum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitSum(this);
		}
	}

	public final SumContext sum() throws RecognitionException {
		SumContext _localctx = new SumContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sum);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(SUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProdContext extends ParserRuleContext {
		public ProdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_prod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterProd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitProd(this);
		}
	}

	public final ProdContext prod() throws RecognitionException {
		ProdContext _localctx = new ProdContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_prod);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(PROD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DynamicVariableAccessContext extends ParserRuleContext {
		public DynamicVariableAccessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_dynamicVariableAccess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterDynamicVariableAccess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitDynamicVariableAccess(this);
		}
	}

	public final DynamicVariableAccessContext dynamicVariableAccess() throws RecognitionException {
		DynamicVariableAccessContext _localctx = new DynamicVariableAccessContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_dynamicVariableAccess);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(DYN_VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryFunctionContext extends ParserRuleContext {
		public BinaryFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_binaryFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterBinaryFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitBinaryFunction(this);
		}
	}

	public final BinaryFunctionContext binaryFunction() throws RecognitionException {
		BinaryFunctionContext _localctx = new BinaryFunctionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_binaryFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOG) | (1L << MAX) | (1L << MIN))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryFunctionContext extends ParserRuleContext {
		public UnaryFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_unaryFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterUnaryFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitUnaryFunction(this);
		}
	}

	public final UnaryFunctionContext unaryFunction() throws RecognitionException {
		UnaryFunctionContext _localctx = new UnaryFunctionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_unaryFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COS) | (1L << SIN) | (1L << TAN) | (1L << ATAN) | (1L << ACOS) | (1L << ASIN) | (1L << SINH) | (1L << COSH) | (1L << TANH) | (1L << COT) | (1L << LN) | (1L << LOG) | (1L << ABS) | (1L << SQRT) | (1L << CBRT) | (1L << SQR) | (1L << CUBE) | (1L << CIEL) | (1L << FLOOR))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NegateContext extends ParserRuleContext {
		public NegateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_negate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterNegate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitNegate(this);
		}
	}

	public final NegateContext negate() throws RecognitionException {
		NegateContext _localctx = new NegateContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_negate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(MINUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LtContext extends ParserRuleContext {
		public LtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_lt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterLt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitLt(this);
		}
	}

	public final LtContext lt() throws RecognitionException {
		LtContext _localctx = new LtContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_lt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(LT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LteqContext extends ParserRuleContext {
		public LteqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_lteq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterLteq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitLteq(this);
		}
	}

	public final LteqContext lteq() throws RecognitionException {
		LteqContext _localctx = new LteqContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_lteq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(LTEQ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GtContext extends ParserRuleContext {
		public GtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override
        public int getRuleIndex() { return RULE_gt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).enterGt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BabelParserListener ) ((BabelParserListener)listener).exitGt(this);
		}
	}
